--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,6 @@ a {
   text-decoration: inherit;
   transition: ease all 0.3s;
 }
-a:hover {
-  color: #f9f9f9f1;
-}
 
 body {
   margin: 0;
@@ -51,6 +48,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
+  border: 1px solid #1a6679;
 }
 
 @media (prefers-color-scheme: light) {
