feat: include loading

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -15,8 +15,9 @@
 span {
   color: #61dbfb;
 }
-.hhh {
+.logo-avatar {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 3rem;
 }
