--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: max-content;
+  /* width: max-content; */
   background-color: #0f172a;
   border-radius: 2rem;
   padding: 1.5rem;
