--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -45,3 +45,100 @@
 .paragraph {
   color: #94a3b8;
 }
+.dropdown{
+  position: absolute;
+  top: 90px;
+  right: 450px;
+  width: max-content;
+  height: auto;
+  background-color: #0f172a;
+}
+.dropdown-box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0.5rem;
+  gap: 0.25rem;
+  height: auto;
+}
+.dropdown-box li{
+  width: 100%;
+  text-align: center;
+  display: flex ;
+}
+.btn{
+  background-color: transparent;
+}
+.btn:hover{
+  border: 1px solid transparent;
+}
+.item{
+  display: flex;
+  gap: 0.3rem;
+  align-items: center;
+  width: 100%;
+  border-radius: 0.2rem;
+  padding: 16px;
+}
+.dropdown-box li:hover{
+  background-color: #1e293b;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 55px;
+  height: 28px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #61dbfb;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #61dbfb;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
