--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -109,6 +109,13 @@
   border-bottom: 1px solid #61dbfb;
   width: 350px;
 }
+.li-box{
+  width: 100%;
+  height: auto;
+}
+p{
+  line-height: 1.5;
+}
 .list{
   padding: 0.5rem;
 }
