--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
+@import 'typeface-poppins';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 
 :root {
   font-family: "Poppins", sans-serif;
