--- a/src/index.css
+++ b/src/index.css
@@ -39,8 +39,8 @@ body {
 button {
   border-radius: 2rem;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1.1em;
+  padding: 0.25rem 1rem;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   color: #1e293b;
