--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -66,65 +66,39 @@
   text-align: center;
   display: flex;
 }
-.btn {
-  background-color: transparent;
-  color: #fff;
-  font-weight: 500;
-}
-.btn:hover {
-  border: 1px solid transparent;
-}
-.item {
-  display: flex;
-  gap: 0.3rem;
-  align-items: center;
-  width: 100%;
-  border-radius: 0.2rem;
-  padding: 16px;
-}
 .dropdown-box li:hover {
   background-color: #1e293b;
 }
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 55px;
-  height: 28px;
-}
 
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-.modal{
+.modal {
   padding: 0.5rem;
 }
-.header-2{
+.header-2 {
   display: flex;
   align-items: center;
-  gap: 0.5rem;  
+  gap: 0.5rem;
 }
-.hr{
+.hr {
   border-bottom: 1px solid #61dbfb;
 }
-.li-box{
+.li-box {
   width: 100%;
   height: auto;
 }
-p{
+p {
   line-height: 1.5;
 }
-.list{
+.list {
   padding: 0.5rem;
 }
-ul, li{
+ul,
+li {
   list-style: disc;
 }
-.h1{
+.h1 {
   font-size: 1rem;
 }
-.header{
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
